# turbopilot

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.cuda  Dockerfile.cuda11  Dockerfile.cuda12  Dockerfile.default  LICENSE.md  MODELS.md  README.md  convert-codegen-to-ggml.py  requirements.txt  run.sh  test.txt  test_codegen2.py  test_santa.py  turbopilot.code-workspace
.github/workflows/: build-commit.yml  build-commit.yml.bak  build-cuda.yml  build-release.yml  cmake.yml  codacy.yml  docker-image.yml  docker-release.yml  test.yml
include/turbopilot/: gptj.hpp  gptneox.hpp  model.hpp  replit.hpp  server.hpp  starcoder.hpp
models/: readme.txt
src/: CMakeLists.txt  common.cpp  gptj.cpp  gptneox.cpp  main.cpp  replit.cpp  server.cpp  starcoder.cpp
